--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -3,6 +3,11 @@
   justify-content: space-between;
   align-items: center;
 
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
   padding: 0 16px;
   height: 70px;
   background-color: rgba(0, 0, 0, 0.3);
