--- a/src/components/post/main/MainPost.module.scss
+++ b/src/components/post/main/MainPost.module.scss
@@ -1,10 +1,25 @@
-.root {}
+.root {
+  display: flex;
+  justify-content: space-between;
+  padding: 36px 20px;
+
+  border: 2px solid #444;
+  border-radius: 24px;
+
+  transition: border 0.3s ease;
+
+  &:hover {
+    border-color: #aaa;
+  }
+}
 
 .header {}
 
 .body {}
 
-.title {}
+.title {
+  font-size: 2.5rem;
+}
 
 .description {}
 
