Add styles to MainPost

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -16,3 +16,8 @@ img, picture, video, canvas, svg {
 input, button, textarea, select {
   font: inherit;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
