--- a/src/components/post/main/MainPost.module.scss
+++ b/src/components/post/main/MainPost.module.scss
@@ -5,10 +5,21 @@
 
   border: 2px solid #444;
 
-  transition: border 0.3s ease;
+  transition: all 0.3s ease;
 
   &:hover {
-    border-color: #aaa;
+    background-color: #232323;
+    border-color: transparent;
+  }
+
+  .body {
+    margin-left: 40px;
+  }
+  .date {
+    margin-bottom: 30px;
+  }
+  .title {
+    margin-bottom: 20px;
   }
 }
 
