--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -8,10 +8,12 @@
   left: 0;
   right: 0;
 
-  padding: 0 16px;
+  padding: 0 15vw;
   height: 70px;
   background-color: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(50px);
+
+  font-size: 1.3rem;
 }
 
 .logo {
