--- a/src/components/post/main/MainPost.module.scss
+++ b/src/components/post/main/MainPost.module.scss
@@ -24,6 +24,7 @@
 .date {
   font-size: 1.5rem;
   margin-bottom: 20px;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .title {
@@ -33,6 +34,7 @@
 
 .description {
   font-size: 1.7rem;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .thumbnail {
