--- a/src/components/post/card/PostCard.module.scss
+++ b/src/components/post/card/PostCard.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
 
   padding: 30px;
   border: 1px solid #333;
